finished adding the syles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>Frontend Mentor | Launch countdown timer</title>
 
   <style>
-    .attribution { font-size: 11px; text-align: center; padding: 10px 0;}
+    .attribution { color: white; font-size: 11px; text-align: center; padding: 10px 0;}
     .attribution a { color: hsl(228, 45%, 44%); }
     .attribution a:hover { color: var(--Soft_red); }
   </style>
@@ -58,9 +58,6 @@
       <i class="fa-brands fa-square-facebook fa-xl"></i>
       <i class="fa-brands fa-square-instagram fa-xl"></i>
       <i class="fa-brands fa-square-pinterest fa-xl"></i>
-      <!-- <img src="images/icon-facebook.svg" alt="facebook Icon" class="facebook">
-      <img src="images/icon-instagram.svg" alt="instagram Icon" class="instagram">
-      <img src="images/icon-pinterest.svg" alt="pinterest Icon" class="pinterest"> -->
     </div>
 
     <div class="attribution">
