--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
     <main>
       <div class="days box">
         <div class="timer">
-          <h3 class="a">08</h3>
+          <h3 class="halfStyled a" data-content="G">08</h3>
         </div>
         <p>Days</p>
       </div>
   
       <div class="hours box">
         <div class="timer">
-          <h3 class="b">23</h3>
+          <h3 class="halfStyled b" data-content="G">23</h3>
         </div>
         <p>Hours</p>
       </div>
   
       <div class="Minutes box">
         <div class="timer">
-          <h3 class="c">55</h3>
+          <h3 class="halfStyled c" data-content="G">55</h3>
         </div>
         <p>Minutes</p>
       </div>
   
       <div class="seconds box">
         <div class="timer">
-          <h3 class="d">41</h3>
+          <h3 class="halfStyled d" data-content="G">41</h3>
         </div>
         <p>Seconds</p>
       </div>
@@ -56,7 +56,7 @@
   <footer>
     <div class="icons">
       <i class="fa-brands fa-square-facebook fa-xl"></i>
-      <i class="fa-brands fa-square-instagram fa-xl"></i>
+      <i class="fa-brands fa-instagram fa-xl"></i>
       <i class="fa-brands fa-square-pinterest fa-xl"></i>
     </div>
 
