--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   </style>
 </head>
 <body>
-  <header>
-    <h2>We're launching soon</h2>
+  <main>
+    <h1>We're launching soon</h1>
 
-    <main>
+    <div class='main'>
       <div class="days box">
         <div class="timer">
           <h3 class="halfStyled a" data-content="G">08</h3>
@@ -50,14 +50,14 @@
         </div>
         <p>Seconds</p>
       </div>
-    </main>
-  </header>
+    </div>
+  </main>
   
   <footer>
     <div class="icons">
       <i class="fa-brands fa-square-facebook fa-xl"></i>
-      <i class="fa-brands fa-instagram fa-xl"></i>
       <i class="fa-brands fa-square-pinterest fa-xl"></i>
+      <i class="fa-brands fa-instagram fa-xl"></i>
     </div>
 
     <div class="attribution">
